[package]
name = "leviso-elf"
version = "0.1.7"
edition = "2021"
rust-version = "1.93"
description = "ELF binary analysis and library dependency copying utilities using readelf"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LevitateOS/leviso-elf"
homepage = "https://github.com/LevitateOS/leviso-elf"
keywords = ["elf", "binary", "library", "dependency", "readelf"]
categories = ["development-tools::build-utils", "filesystem"]
readme = "README.md"

[dependencies]
anyhow = "1.0"

[dev-dependencies]
leviso-cheat-test = { path = "../testing/cheat-test" }
